--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Home</title>
   </head>
   <body>
-    
+
     <header>
       <div class="container">
         <nav>
@@ -30,6 +30,11 @@
       <button id="portfolio-button">Portfolio</button>
     </div>
 
+
+    <div class="footer">
+
+    </div>
+    
     </div>
   </body>
 </html>
