--- a/about.html
+++ b/about.html
@@ -12,51 +12,52 @@
   </head>
   <body>
 
-    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-    <ahref="/"class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-      <svg
-        class="bi me-2"
-        width="40"
-        height="32"
-        role="img"
-        aria-label="Bootstrap"
+
+    <header
+        class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
       >
-        <use xlink:href="#bootstrap" />
-      </svg>
-    </a>
-
-    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-      <li>
-        <a href="./index.html" class="nav-link px-2 link-secondary">Home</a>
-      </li>
-      <li>
-        <a href="./about.html" class="nav-link px-2 link-dark">About</a>
-      </li>
-      <li>
-        <a href="./resume.html" class="nav-link px-2 link-dark">Resume</a>
-      </li>
-      <li>
-        <a href="./portfolio.html" class="nav-link px-2 link-dark"
-          >Portfolio</a
+        <a
+          href="/"
+          class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
         >
-      </li>
-      <li>
-        <a href="./contact.html" class="nav-link px-2 link-dark">Contact</a>
-      </li>
-    </ul>
-  </header>
-</div>
+          <svg
+            class="bi me-2"
+            width="40"
+            height="32"
+            role="img"
+            aria-label="Bootstrap"
+          >
+            <use xlink:href="#bootstrap" />
+          </svg>
+        </a>
 
-<body>
-
-  <div class="container">
-
+        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+          <li>
+            <a href="./index.html" class="nav-link px-2 link-secondary">Home</a>
+          </li>
+          <li>
+            <a href="./about.html" class="nav-link px-2 link-dark">About</a>
+          </li>
+          <li>
+            <a href="./resume.html" class="nav-link px-2 link-dark">Resume</a>
+          </li>
+          <li>
+            <a href="./portfolio.html" class="nav-link px-2 link-dark"
+              >Portfolio</a
+            >
+          </li>
+          <li>
+            <a href="./contact.html" class="nav-link px-2 link-dark">Contact</a>
+          </li>
+        </ul>
+      </header>
+    </div>
     <div class="heading">
         <h1>Hi, I'm Jenn. I'm happy you're here!</h1><br>
     </div> 
 
-    <div class="section1">
-        <h3>I am a student of web development in Austin, TX specializing in front-end development and content creation.</h3>
+    <div class="section1 bg-light border">
+        <h3>Web Developer specializing in front-end development and content creation.</h3>
           <p> I love the structure of coding and strive to write the most efficient code in HTML, CSS and JS.</p>
     </div>
 
@@ -78,18 +79,24 @@
       </div>
 
 
+
+
+
+
+
+
+
+
+      <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+        <p>&copy; 2022 Company, Inc. All rights reserved.</p>
+        <ul class="list-unstyled d-flex">
+          <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
+          <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
+          <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
+        </ul>
+      </div>
+    </footer>
   </div>
-
-
-
-
-
-
-
-
-
-
-
 
 
     <script
@@ -107,5 +114,8 @@
       integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
       crossorigin="anonymous"
     ></script>
+
+    
+    </div>
   </body>
 </html>
