--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Home</title>
   </head>
+
   <body>
 
-    <div class="container">
       <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
           <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
@@ -27,17 +27,36 @@
     </div>
 
     <div class="main">
-      <h2>Hi, I'm</h2>
+      <h2>I'm</h2>
       <h1>Jennifer Franco</h1>
-      <img src="#" id="profile-pic" alt="Head shot of Me">
-      <h3>Student of Web Development</h3>
-      <button id="portfolio-button">Portfolio</button>
+      <img src="./myProfilePic.jpg" id="profile-pic" alt="Head shot of Me" width="300px" height="300px">
+      <h3>A Web Developer based in Austin, Texas</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias natus, esse vero beatae aut nostrum temporibus tempora? Blanditiis vitae molestiae perspiciatis voluptate repellendus saepe consectetur, dicta fugit dolorem, eveniet tenetur</p>
+      <!-- <button class="button">Portfolio</button> -->
+
+      <div class="row">
+        <div class="column">
+          <img src="#" alt="pic" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="#" alt="pic" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="#" alt="pic" style="width:100%">
+        </div>
+      </div>
     </div>
 
-
-
-      
-    
+    <div class="footer d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+      <p>&copy; 2022 Company, Inc. All rights reserved.</p>
+      <ul class="list-unstyled d-flex">
+        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
+        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
+        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
+      </ul>
+    </div>
+    </footer>
+   
   </div>
 
 
