--- a/resume.html
+++ b/resume.html
@@ -55,19 +55,6 @@
   </header>
 </div>
 
-
-<main class="container py-5">
-  <h1>Bootstrap and Masonry</h1>
-  <p class="lead">Integrate <a href="https://masonry.desandro.com/">Masonry</a> with the Bootstrap grid system and cards component.</p>
-
-  <p>Masonry is not included in Bootstrap. Add it by including the JavaScript plugin manually, or using a CDN like so:</p>
-
-  <pre><code>
-&lt;script src=&quot;https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js&quot; integrity=&quot;sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D&quot; crossorigin=&quot;anonymous&quot; async&gt;&lt;/script&gt;
-  </code></pre>
-
-  <p>By adding <code>data-masonry='{"percentPosition": true }'</code> to the <code>.row</code> wrapper, we can combine the powers of Bootstrap's responsive grid and Masonry's positioning.</p>
-
   <hr class="my-5">
 
   <div class="row" data-masonry='{"percentPosition": true }'>
@@ -166,9 +153,16 @@
 
 
 
-
-
-
+<div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+  <p>&copy; 2022 Company, Inc. All rights reserved.</p>
+  <ul class="list-unstyled d-flex">
+    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
+    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
+    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
+  </ul>
+</div>
+</footer>
+</div>
 
 
     <script
