--- a/portfolio.html
+++ b/portfolio.html
@@ -62,75 +62,60 @@
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
               <div class="card shadow-sm">
-                <img src="website.jpg" width="250" height="225" />
+                <img src="website.jpg" width="250" height="225"/>
 
                 <div class="card-body">
                   <p class="card-text">
-                    This is a broader card with supporting text below as a
-                    natural introduction to additional content. This content is
-                    a little longer.
+                    This is a mockup website that I used to practice skills I've learned, thereby deepening my understanding of their purpose.<br><br> 
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
                     <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Show
-                      </button>
+                      <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Show</button> -->
+                      <a href="https://jfranco3.github.io/hairSalonWebsite/" class="btn btn-sm btn-outline-secondary">Show</a>
                     </div>
+
                   </div>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="TTT.jpg" width="250" height="225" />
+                <img src="TTT.jpg" width="250" height="225"/>
 
                 <div class="card-body">
                   <p class="card-text">
-                    This is a broader card with supporting text below as a
-                    natural introduction to additional content. This content is
-                    a little longer.
+                 This table was built with HTML Table Elements, learned how to access & use Element Properties like innerHTML and use Event Listener Methods like getElementById.
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
                     <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Show
-                      </button>
+                      <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Show</button> -->
+                      <a href="https://jfranco3.github.io/TicTacToe-101/" class="btn btn-sm btn-outline-secondary">Show</a>
                     </div>
+
                   </div>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="firstresponsivesite.jpg" width="250" height="225" />
+                <img src="firstresponsivesite.jpg" width="250" height="225"/>
 
                 <div class="card-body">
                   <p class="card-text">
-                    This is a broader card with supporting text below as a
-                    natural introduction to additional content. This content is
-                    a little longer.
+                    Here I was able to practice good file structure, use css grid, flex, media queries, and the box model to build a well-built and responsive website.
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
                     <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Show
-                      </button>
+                      <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Show</button> -->
+                      <a href="https://jfranco3.github.io/First-Responsive-Website/" class="btn btn-sm btn-outline-secondary">Show</a>
                     </div>
+
                   </div>
                 </div>
               </div>
@@ -138,75 +123,60 @@
 
             <div class="col">
               <div class="card shadow-sm">
-                <img src="evenandodd.jpg" width="250" height="225" />
+                <img src="evenandodd.jpg" width="250" height="225"/>
 
                 <div class="card-body">
                   <p class="card-text">
-                    This is a broader card with supporting text below as a
-                    natural introduction to additional content. This content is
-                    a little longer.
+                    I was able to change HTML Element Properties with JavaScript. Introduced to how JavaScript allows us to interact with the DOM and capture DOM Events like onclick and onkeyup.
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
                     <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Show
-                      </button>
+                      <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Show</button> -->
+                      <a href="https://jfranco3.github.io/evenOdd-lists/" class="btn btn-sm btn-outline-secondary">Show</a>
                     </div>
+
                   </div>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="nasa.jpg" width="250" height="225" />
+                <img src="nasa.jpg" width="250" height="225"/>
 
                 <div class="card-body">
                   <p class="card-text">
-                    This is a broader card with supporting text below as a
-                    natural introduction to additional content. This content is
-                    a little longer.
-                  </p>
+                  This project really cemented the importance of wireframing, CSS flex and box model.
+                  </p><br><br>
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
                     <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Show
-                      </button>
+                      <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Show</button> -->
+                      <a href="https://jfranco3.github.io/NASA/" class="btn btn-sm btn-outline-secondary">Show</a>
                     </div>
+
                   </div>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="contactform.jpg" width="250" height="225" />
+                <img src="contactform.jpg" width="250" height="225"/>
 
                 <div class="card-body">
                   <p class="card-text">
-                    This is a broader card with supporting text below as a
-                    natural introduction to additional content. This content is
-                    a little longer.
+                    I built a Contact Me Page that is responsive to mobile, tablet, & laptop. And I added a hint of flair with Glow text!<br><br><br>
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
                     <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Show
-                      </button>
+                      <!-- <button type="button"class="btn btn-sm btn-outline-secondary">Show</button> -->
+                      <a href="https://jfranco3.github.io/Web101_Jennifer_Franco/contactform.html" class="btn btn-sm btn-outline-secondary">Show</a>
                     </div>
+
                   </div>
                 </div>
               </div>
@@ -214,75 +184,60 @@
 
             <div class="col">
               <div class="card shadow-sm">
-                <img src="calculator.jpg" width="250" height="225" />
+                <img src="calculator.jpg" width="250" height="225"/>
 
                 <div class="card-body">
                   <p class="card-text">
-                    This is a broader card with supporting text below as a
-                    natural introduction to additional content. This content is
-                    a little longer.
+                    This project helped me understand how JavaScript is connected to your HTML. It helped be break things down to see how this function is working.
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
                     <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Show
-                      </button>
+                      <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Show</button> -->
+                      <a href="https://jfranco3.github.io/calculator-app-101/" class="btn btn-sm btn-outline-secondary">Show</a>
                     </div>
+
                   </div>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="acawebsite.jpg" width="250" height="225" />
+                <img src="acawebsite.jpg" width="250" height="225"/>
 
                 <div class="card-body">
                   <p class="card-text">
-                    This is a broader card with supporting text below as a
-                    natural introduction to additional content. This content is
-                    a little longer.
+                    I created multiples files to build and sytle multiple pages within a mockup Portfolio project. I also learned to link files by changing href= value to the correct pathname.
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
                     <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Show
-                      </button>
+                      <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Show</button> -->
+                      <a href="https://jfranco3.github.io/Web101_Jennifer_Franco/" class="btn btn-sm btn-outline-secondary">Show</a>
                     </div>
+
                   </div>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="dummydatatodo.jpg" width="250" height="225" />
+                <img src="dummydatatodo.jpg" width="250" height="225"/>
 
                 <div class="card-body">
                   <p class="card-text">
-                    This is a broader card with supporting text below as a
-                    natural introduction to additional content. This content is
-                    a little longer.
+                    Here I used Fetch API to interact with APIs outside of the browser, use APIs, loop over JavaScript arrays, create multiple items and filter items.
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
                     <div class="btn-group">
-                      <button
-                        type="button"
-                        class="btn btn-sm btn-outline-secondary"
-                      >
-                        Show
-                      </button>
+                      <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Show</button> -->
+                      <a href="https://jfranco3.github.io/Dummy-Data-Todos/" class="btn btn-sm btn-outline-secondary">Show</a>
                     </div>
+
                   </div>
                 </div>
               </div>
@@ -291,6 +246,17 @@
         </div>
       </div>
     </main>
+
+    <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+      <p>&copy; 2022 Company, Inc. All rights reserved.</p>
+      <ul class="list-unstyled d-flex">
+        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
+        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
+        <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
+      </ul>
+    </div>
+  </footer>
+  </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
