link contact js

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <script src="contact.js"></script>
     <link rel="stylesheet" href="./contact.css">
     <title>Contact Me</title>
   </head>
@@ -64,7 +65,7 @@
         <h1 class="display-5 fw-bold">Get in Touch</h1><br>
             <h2>Why would you like to connect with me? Choose below:</h2><br>
           
-            <form>
+        <form>
               <form action="">
             <label for="reason"></label>
             <select id="reason" name="reason">
@@ -72,8 +73,8 @@
             <option value="reason2">You'd like to know more.</option>
             <option value="reason3">You'd like to collaborate.</option>
             <option value="reason4">You'd like to interview me.</option>
-        
-          </select>
+            </select>
+
           <button class="btn btn-outline-secondary" type="button">Submit</button> 
         </form>
       </div>
