--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"/>
+    </script>
       <link rel="stylesheet" href="./about.css">
     <title>About</title>
   </head>
@@ -64,9 +65,9 @@
    
     <div class="section2"><br><br>
     <h3>When I'm not coding you can find me...</h3>
+      <p>or out enjoying different foods</p>
       <p>hiking with my dog, Jag</p>
       <p>out by the water</p>
-      <p>or at a resturant enjoying delicious foods.</p>
     </div>  
 
       <div class="flex-container">
@@ -77,15 +78,6 @@
         <div class="img10"><img src="./img10.jpg" alt=""></div>
         <div class="img11"><img src="./img11.jpg" alt=""></div> 
       </div>
-
-
-
-
-
-
-
-
-
 
       <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
         <p>&copy; 2022 Company, Inc. All rights reserved.</p>
