--- a/resume.html
+++ b/resume.html
@@ -55,7 +55,7 @@
   </header>
 </div>
 
-  <hr class="my-5">
+  <hr class="h-100 p-5 bg-light border rounded-3">
 
   <div class="row" data-masonry='{"percentPosition": true }'>
     <div class="col-sm-6 col-lg-4 mb-4">
