editing about and home

--- a/about.html
+++ b/about.html
@@ -53,24 +53,24 @@
         </ul>
       </header>
     </div>
-    <div class="heading">
-        <h1>Hi, I'm Jenn. I'm happy you're here!</h1><br>
+    <div class="heading bg-light border">
+        <h1>I'm Jenn Franco, and I'm <br> happy you're here!</h1><br>
     </div> 
 
     <div class="section1 bg-light border">
-        <h3>Web Developer specializing in front-end development and content creation.</h3>
+        <h3>I specialize in front-end development and content creation.</h3>
           <p> I love the structure of coding and strive to write the most efficient code in HTML, CSS and JS.</p>
     </div>
 
    
     <div class="section2"><br><br>
     <h3>When I'm not coding you can find me...</h3>
-      <p>or out enjoying different foods</p>
+      <p>out enjoying different foods</p>
       <p>hiking with my dog, Jag</p>
-      <p>out by the water</p>
+      <p>or out by the water!</p>
     </div>  
 
-      <div class="flex-container">
+      <div class="flex-container bg-light border">
         <div class="img1"><img src="./img1.jpg" alt=""></div>
         <div class="img5"><img src="./img5.jpg" alt=""></div>
         <div class="img4"><img src="./img4.jpg" alt=""></div>
