--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     </div>
 
     <div class="main">
-      <h2>I'm</h2>
-      <h1>Jennifer Franco</h1>
+      <h2>Hi there,</h2>
+      <h1>I am a Web Developer</h1>
       <img src="./myProfilePic.jpg" id="profile-pic" alt="Head shot of Me" width="300px" height="300px">
-      <h3>A Web Developer based in Austin, Texas</h3>
+      <h3>Austin, Texas</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias natus, esse vero beatae aut nostrum temporibus tempora? Blanditiis vitae molestiae perspiciatis voluptate repellendus saepe consectetur, dicta fugit dolorem, eveniet tenetur</p>
       <!-- <button class="button">Portfolio</button> -->
 
