--- a/resume.html
+++ b/resume.html
@@ -10,6 +10,9 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Yantramanav:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./resume.css">
     <title>Resume</title>
   </head>
@@ -55,106 +58,79 @@
   </header>
 </div>
 
-  <hr class="h-100 p-5 bg-light border rounded-3">
+  <!-- <hr class="h-100 p-5 bg-light border rounded-3"> -->
 
-  <div class="row" data-masonry='{"percentPosition": true }'>
-    <div class="col-sm-6 col-lg-4 mb-4">
-      <div class="card">
-        <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text></svg>
 
-        <div class="card-body">
-          <h5 class="card-title">Card title that wraps to a new line</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 col-lg-4 mb-4">
-      <div class="card p-3">
-        <figure class="p-3 mb-0">
-          <blockquote class="blockquote">
-            <p>A well-known quote, contained in a blockquote element.</p>
-          </blockquote>
-          <figcaption class="blockquote-footer mb-0 text-muted">
-            Someone famous in <cite title="Source Title">Source Title</cite>
-          </figcaption>
-        </figure>
-      </div>
-    </div>
-    <div class="col-sm-6 col-lg-4 mb-4">
-      <div class="card">
-        <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text></svg>
+<div class="container">
 
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 col-lg-4 mb-4">
-      <div class="card bg-primary text-white text-center p-3">
-        <figure class="mb-0">
-          <blockquote class="blockquote">
-            <p>A well-known quote, contained in a blockquote element.</p>
-          </blockquote>
-          <figcaption class="blockquote-footer mb-0 text-white">
-            Someone famous in <cite title="Source Title">Source Title</cite>
-          </figcaption>
-        </figure>
-      </div>
-    </div>
-    <div class="col-sm-6 col-lg-4 mb-4">
-      <div class="card text-center">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This card has a regular title and short paragraph of text below it.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6 col-lg-4 mb-4">
-      <div class="card">
-        <svg class="bd-placeholder-img card-img" width="100%" height="260" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Card image" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Card image</text></svg>
+  <div class="pic"><img src="./myProfilePic.jpg" height="200px" width="200px"></div>
 
-      </div>
+    <div class="title">
+      <h1><strong>JENNIFER FRANCO</strong></h1>
+      <h5>WEB DEVELOPER</h5>
+   </div>
+   
+    <hr>
+
+    <div class="contact">
+      <p>+1 123-456-7890</p>
+      <p>emailaddress@gmail.com</p>
+      <p>123 Somewhere, Texas 10090</p>
     </div>
-    <div class="col-sm-6 col-lg-4 mb-4">
-      <div class="card p-3 text-end">
-        <figure class="mb-0">
-          <blockquote class="blockquote">
-            <p>A well-known quote, contained in a blockquote element.</p>
-          </blockquote>
-          <figcaption class="blockquote-footer mb-0 text-muted">
-            Someone famous in <cite title="Source Title">Source Title</cite>
-          </figcaption>
-        </figure>
-      </div>
+
+    <div class="summary">
+      <h5>SUMMARY</h5>
+      <p>I am a web developer based in Austin, TX. I've been building and tweaking websites for over 10 years. I love to troubleshoot, work on cool projects that allow me to explore new web design trends and effects and provided solutions to clients and their website needs.</p>
     </div>
-    <div class="col-sm-6 col-lg-4 mb-4">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is another card with title and supporting text below. This card has some additional content to make it slightly taller overall.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
-      </div>
+
+    <div class="work">
+      <h5>WORK EXPERIENCE</h5>
+
+      <p class="dates">2010-current/Company Name</p>
+      <h6><strong>WEB DEVELOPER</strong></h6>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae consequuntur animi, natus est rem voluptatibus exercitationem quas voluptatem tempore quasi voluptate molestiae error similique quidem cum optio nulla! Non, laboriosam.</p>
+
+      <p class="dates">2010-current/Company Name</p>
+      <h6><strong>WEB DEVELOPER</strong></h6>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid debitis exercitationem voluptas quasi quibusdam nam nostrum ea cumque odit natus nulla inventore, ipsa ex sunt provident soluta eos tenetur nemo.</p>
+
+      <p class="dates">2010-current/Company Name</p>
+      <h6><strong>WEB DEVELOPER</strong></h6>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit non alias eius vel illo expedita dolorum nihil molestiae, dolore dignissimos est aspernatur blanditiis tempora sit minus, voluptate nostrum nam! Sint?</p>
+      
+    </div>
+    <div class="skills">
+      <h5>SKILLS</h5>
+      <ul>
+        <li>Time management</li>
+        <li>Team Oriented</li>
+        <li>Adaptability</li>
+        <li>Verbal Communication</li>
+        <li>Self-motivation</li>
+        <li>Leadership</li>
+        <li>Managing Expenses</li>
+        <li>Bilingual: English and Spanish</li>
+        <li>Working Independently</li>
+      </ul>
+    </div>
+
+    <div class="education">
+      <h5>EDUCATION</h5>
+      <p class="dates">2005-2009</p>
+      <h6><strong>Master's Degree, Major</strong></h6>
+      <p>University Name</p>
+
+      <p class="dates">2005-2009</p>
+      <h6><strong>Master's Degree, Major</strong></h6>
+      <p>University Name</p>
+
     </div>
   </div>
-
-</main>
-
-
-
-
-
-
-
-
 
 
 
 <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-  <p>&copy; 2022 Company, Inc. All rights reserved.</p>
+  <p class="copyright">&copy; 2022 Company, Inc. All rights reserved.</p>
   <ul class="list-unstyled d-flex">
     <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
     <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"/></svg></a></li>
