--- a/resume.html
+++ b/resume.html
@@ -63,14 +63,13 @@
 
 <div class="container">
 
-  <div class="pic"><img src="./myProfilePic.jpg" height="200px" width="200px"></div>
+  <div class="pic"><img src="./myProfilePic.jpg" height="250px" width="250px"></div>
 
     <div class="title">
       <h1><strong>JENNIFER FRANCO</strong></h1>
       <h5>WEB DEVELOPER</h5>
-   </div>
-   
-    <hr>
+      <hr>
+   </div> 
 
     <div class="contact">
       <p>+1 123-456-7890</p>
@@ -80,12 +79,14 @@
 
     <div class="summary">
       <h5>SUMMARY</h5>
-      <p>I am a web developer based in Austin, TX. I've been building and tweaking websites for over 10 years. I love to troubleshoot, work on cool projects that allow me to explore new web design trends and effects and provided solutions to clients and their website needs.</p>
+      <hr>
+    
+      <p>I am a web developer based in Austin, TX. I've been building and tweaking websites for over 10 years. I love to troubleshoot, work on cool projects that allow me to explore new web design trends and provid solutions to clients and their website needs.</p>
     </div>
 
     <div class="work">
       <h5>WORK EXPERIENCE</h5>
-
+      <hr>
       <p class="dates">2010-current/Company Name</p>
       <h6><strong>WEB DEVELOPER</strong></h6>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae consequuntur animi, natus est rem voluptatibus exercitationem quas voluptatem tempore quasi voluptate molestiae error similique quidem cum optio nulla! Non, laboriosam.</p>
@@ -101,6 +102,7 @@
     </div>
     <div class="skills">
       <h5>SKILLS</h5>
+    <hr>
       <ul>
         <li>Time management</li>
         <li>Team Oriented</li>
@@ -109,13 +111,14 @@
         <li>Self-motivation</li>
         <li>Leadership</li>
         <li>Managing Expenses</li>
-        <li>Bilingual: English and Spanish</li>
+        <li>Bilingual: English & Spanish</li>
         <li>Working Independently</li>
       </ul>
     </div>
 
     <div class="education">
       <h5>EDUCATION</h5>
+      <hr>
       <p class="dates">2005-2009</p>
       <h6><strong>Master's Degree, Major</strong></h6>
       <p>University Name</p>
