--- a/index.html
+++ b/index.html
@@ -31,21 +31,8 @@
       <h1>I am a Web Developer</h1>
       <img src="./myProfilePic.jpg" id="profile-pic" alt="Head shot of Me" width="300px" height="300px">
       <h3>Austin, Texas</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias natus, esse vero beatae aut nostrum temporibus tempora? Blanditiis vitae molestiae perspiciatis voluptate repellendus saepe consectetur, dicta fugit dolorem, eveniet tenetur</p>
-      <!-- <button class="button">Portfolio</button> -->
-
-      <div class="row">
-        <div class="column">
-          <img src="#" alt="pic" style="width:100%">
-        </div>
-        <div class="column">
-          <img src="#" alt="pic" style="width:100%">
-        </div>
-        <div class="column">
-          <img src="#" alt="pic" style="width:100%">
-        </div>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias natus, esse vero beatae aut nostrum temporibus tempora? Blanditiis vitae molestiae perspiciatis voluptate repellendus saepe consectetur, dicta fugit dolorem, eveniet tenetur</p><br><br>
       </div>
-    </div>
 
     <div class="footer d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
       <p>&copy; 2022 Company, Inc. All rights reserved.</p>
@@ -56,8 +43,6 @@
       </ul>
     </div>
     </footer>
-   
-  </div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
