--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
 
                 <div class="card-body">
                   <p class="card-text">
-                    This is a mockup website that I used to practice skills I've learned, thereby deepening my understanding of their purpose.<br><br> 
+                    This is a mockup website that I used to practice skills I've learned, thereby deepening my understanding of their purpose.<br>
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
@@ -248,7 +248,8 @@
       </div>
     </main>
 
-    <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+    
+    <div class="footer d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
       <p>&copy; 2022 Company, Inc. All rights reserved.</p>
       <ul class="list-unstyled d-flex">
         <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
@@ -256,8 +257,7 @@
         <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"/></svg></a></li>
       </ul>
     </div>
-  </footer>
-  </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
