changing home pg and font

--- a/about.html
+++ b/about.html
@@ -8,7 +8,10 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"/>
     </script>
-      <link rel="stylesheet" href="./about.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Yantramanav:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./about.css">
     <title>About</title>
   </head>
   <body>
