--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Yantramanav:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
     <title>Home</title>
   </head>
@@ -26,13 +29,18 @@
       </header>
     </div>
 
-    <div class="main">
-      <h2>Hi there,</h2>
-      <h1>I am a Web Developer</h1>
-      <img src="./myProfilePic.jpg" id="profile-pic" alt="Head shot of Me" width="300px" height="300px">
-      <h3>Austin, Texas</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias natus, esse vero beatae aut nostrum temporibus tempora? Blanditiis vitae molestiae perspiciatis voluptate repellendus saepe consectetur, dicta fugit dolorem, eveniet tenetur</p><br><br>
-      </div>
+
+  <div class="main">
+      <h3>Hi there,</h3>
+
+      <hr style="width:25%; color:white;margin-left:15%">
+
+      <h1>I'm a Web Developer</h1>
+      <!-- <img src="./myProfilePic.jpg" id="profile-pic" alt="Head shot of Me" width="300px" height="300px"> -->
+      <!-- <h4>Austin, Texas</h4> -->
+        <!-- <br><br><br><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias natus, esse vero beatae aut nostrum temporibus tempora? Blanditiis vitae molestiae perspiciatis voluptate repellendus saepe consectetur, dicta fugit dolorem, eveniet tenetur</p>
+        <br><br> -->
+  </div>
 
     <div class="footer d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
       <p>&copy; 2022 Company, Inc. All rights reserved.</p>
