--- a/resume.html
+++ b/resume.html
@@ -72,7 +72,7 @@
       <p>I am a web developer based in Austin, TX. I've been building and tweaking websites for over 10 years. I love to troubleshoot, work on cool projects that allow me to explore new web design trends and provid solutions to clients and their website needs.</p>
     </div>
 
-    <div class="pic"><img src="./myProfilePic.jpg" height="275px" width="250px"></div>
+    <div class="pic"><img src="./rpic.jpg" height="275px" width="250px"></div>
 
     <div class="work">
       <h5>WORK EXPERIENCE</h5>
