--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,8 @@
     </div>
 
     <main>
-      <h1>My Work</h1>
+      <h1><strong>My Work</strong></h1>
+      <hr style="width:30%; margin-left:34%">
       
       <div class="album py-5 bg-light">
         <div class="container">
