--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
           <li><a href="./index.html" class="nav-link px-2 link-secondary">Home</a></li>
-          <li><a href="./about.html" class="nav-link px-2 link-dark">About</a></li>
+          <li><a href="./about2.html" class="nav-link px-2 link-dark">About</a></li>
           <li><a href="./resume.html" class="nav-link px-2 link-dark">Resume</a></li>
           <li><a href="./portfolio.html" class="nav-link px-2 link-dark">Portfolio</a></li>
           <li><a href="./contact.html" class="nav-link px-2 link-dark">Contact</a></li>
