editing about pg

--- a/about.html
+++ b/about.html
@@ -58,36 +58,76 @@
     </div>
 
 
-  <div class="container bg-light border">
+    <div class="container bg-light border">
 
-    <div class="heading bg-light border">
-        <h1>I'm Jenn Franco, and I'm <br> happy you're here!</h1><br>
-    </div> 
 
-    <div class="section1 bg-light border">
-      <h3>I specialize in front-end development and content creation.</h3>
-        <p> I love the structure of coding and strive to write the most efficient code in HTML, CSS and JS.</p>
-    </div>
+        <div class="title">
+            <h1><strong>About</strong></h1>
+            <hr style="width:50%; margin-left: 25%">
+        </div>
 
-   
-    <div class="section2"><br><br>
-      <h3>When I'm not coding you can find me...</h3>
-        <p>out enjoying different foods</p>
-        <p>hiking with my dog, Jag</p>
-        <p>or out by the water!</p>
-    </div>  
+        <div class="pic">
+            <img src="./about.jpg" width="500px">
+         </div>
 
-    <div class="flex-container bg-light border">
-      <div class="img1"><img src="./img1.jpg" alt=""></div>
-      <div class="img5"><img src="./img5.jpg" alt=""></div>
-      <div class="img4"><img src="./img4.jpg" alt=""></div>
-      <div class="img8"><img src="./img8.jpg" alt=""></div>
-      <div class="img10"><img src="./img10.jpg" alt=""></div>
-      <div class="img11"><img src="./img11.jpg" alt=""></div> 
-    </div>
-  </div>
+         <!-- <hr style="width:50%; margin-left: 25%"> -->
 
-      <div class="footer d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+        <div class="info">
+            <br><br><h1><strong>I'm Jenn Franco. I'm happy you're here!</strong></h1><br>
+                <p>I began my professional career working in web development at Company.</p>
+
+            <hr style="width:50%; margin-left: 25%">
+
+            <h2>I specialize in front-end development and content creation.</h2>
+                <p>I love the structure of coding and strive to write the most efficient code in HTML, CSS and JS.</p>
+
+            <hr style="width:50%; margin-left: 25%">
+
+            <h3>When I'm not coding, you can find me</h3>
+            <p>out enjoying different foods</p>
+            <p>hiking with my dog, Jag</p>
+            <p>or out by the water!</p>
+        </div>
+    
+
+        <div class="img1">
+            <img src="./img1.jpg" alt="" width="250px">
+        </div>
+
+        <div class="img2">
+            <img src="./img5.jpg" alt="" width="250px" >
+        </div>
+
+        <div class="img3">
+            <img src="./img4.jpg" alt="" width="250px">
+        </div>
+
+        <div class="img4">
+            <img src="./img8.jpg" alt="" width="250px">
+        </div>
+
+        <div class="img5">
+            <img src="./img10.jpg" alt="" width="250px">
+        </div>
+
+        <div class="img6">
+            <img src="./img11.jpg" alt="" width="250px"> 
+        </div>
+
+    </div>    
+ 
+
+
+
+
+
+
+
+
+
+
+
+    <div class="footer d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
         <p>&copy; 2022 Company, Inc. All rights reserved.</p>
         <ul class="list-unstyled d-flex">
           <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"/></svg></a></li>
@@ -115,6 +155,6 @@
     ></script>
 
     
-    </div>
   </body>
 </html>
+  
