linking home pg

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
          <!-- <hr style="width:50%; margin-left: 25%"> -->
 
         <div class="info">
-            <br><br><h1><strong>I'm Jenn Franco. I'm happy you're here!</strong></h1><br>
+            <br><br><h1><strong>I'm Jenn Franco, <br>and<br> I'm happy you're here!</strong></h1><br>
                 <p>I began my professional career working in web development at Company.</p>
 
             <hr style="width:50%; margin-left: 25%">
