--- a/portfolio.html
+++ b/portfolio.html
@@ -4,27 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"/>
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Yantramanav:wght@300;400;500&display=swap" rel="stylesheet">/>
-
-    <link rel="stylesheet" href="./portfolio.css" />
+      <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Yantramanav:wght@300;400;500&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="./portfolio.css">
     <title>Portfolio</title>
   </head>
   <body>
     
-      <header
-        class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
+      <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
       >
-        <a
-          href="/"
-          class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none"
-        >
+        <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
           <svg
             class="bi me-2"
             width="40"
@@ -67,7 +59,7 @@
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
               <div class="card shadow-sm">
-                <img src="website.jpg" width="250" height="225"/>
+                <img src="website.jpg" class="img-thumbnail"/>
 
                 <div class="card-body">
                   <p class="card-text">
@@ -87,7 +79,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="TTT.jpg" width="250" height="225"/>
+                <img src="TTT.jpg" class="img-thumbnail"/>
 
                 <div class="card-body">
                   <p class="card-text">
@@ -107,7 +99,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="firstresponsivesite.jpg" width="250" height="225"/>
+                <img src="firstresponsivesite.jpg" class="img-thumbnail"/>
 
                 <div class="card-body">
                   <p class="card-text">
@@ -128,7 +120,7 @@
 
             <div class="col">
               <div class="card shadow-sm">
-                <img src="evenandodd.jpg" width="250" height="225"/>
+                <img src="evenandodd.jpg" class="img-thumbnail"/>
 
                 <div class="card-body">
                   <p class="card-text">
@@ -148,12 +140,12 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="nasa.jpg" width="250" height="225"/>
+                <img src="nasa.jpg" class="img-thumbnail"/>
 
                 <div class="card-body">
                   <p class="card-text">
                   This project really cemented the importance of wireframing, CSS flex and box model.
-                  </p><br><br>
+                  </p><br><br><br>
                   <div
                     class="d-flex justify-content-between align-items-center"
                   >
@@ -168,7 +160,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="contactform.jpg" width="250" height="225"/>
+                <img src="contactform.jpg" class="img-thumbnail"/>
 
                 <div class="card-body">
                   <p class="card-text">
@@ -178,7 +170,6 @@
                     class="d-flex justify-content-between align-items-center"
                   >
                     <div class="btn-group">
-                      <!-- <button type="button"class="btn btn-sm btn-outline-secondary">Show</button> -->
                       <a href="https://jfranco3.github.io/Web101_Jennifer_Franco/contactform.html" class="btn btn-sm btn-outline-secondary">Show</a>
                     </div>
 
@@ -189,7 +180,7 @@
 
             <div class="col">
               <div class="card shadow-sm">
-                <img src="calculator.jpg" width="250" height="225"/>
+                <img src="calculator.jpg" class="img-thumbnail"/>
 
                 <div class="card-body">
                   <p class="card-text">
@@ -209,7 +200,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="acawebsite.jpg" width="250" height="225"/>
+                <img src="acawebsite.jpg" class="img-thumbnail"/>
 
                 <div class="card-body">
                   <p class="card-text">
@@ -229,7 +220,7 @@
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="dummydatatodo.jpg" width="250" height="225"/>
+                <img src="dummydatatodo.jpg" class="img-thumbnail"/>
 
                 <div class="card-body">
                   <p class="card-text">
