--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
          <!-- <hr style="width:50%; margin-left: 25%"> -->
 
         <div class="info">
-            <br><br><h1><strong>I'm Jenn Franco, <br>and<br> I'm happy you're here!</strong></h1><br>
+            <h1><strong>I'm <br>Jenn Franco<br>and<br> I'm happy you're here!</strong></h1><br>
                 <p>I began my professional career working in web development at Company.</p>
 
             <hr style="width:50%; margin-left: 25%">
@@ -115,17 +115,6 @@
         </div>
 
     </div>    
- 
-
-
-
-
-
-
-
-
-
-
 
     <div class="footer d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
         <p>&copy; 2022 Company, Inc. All rights reserved.</p>
@@ -136,7 +125,6 @@
         </ul>
       </div>
       </footer>
-
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
