--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <hr style="width:25%; color:white;margin-left:15%">
 
-      <h1><a href="./portfolio.html"> I'm a Web Developer</a></h1>
+      <h1><a href="./about.html"> I'm a Web Developer</a></h1>
       <!-- <img src="./myProfilePic.jpg" id="profile-pic" alt="Head shot of Me" width="300px" height="300px"> -->
       <!-- <h4>Austin, Texas</h4> -->
         <!-- <br><br><br><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias natus, esse vero beatae aut nostrum temporibus tempora? Blanditiis vitae molestiae perspiciatis voluptate repellendus saepe consectetur, dicta fugit dolorem, eveniet tenetur</p>
