--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Yantramanav:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="./resume.css">
     <title>Resume</title>
   </head>
@@ -56,17 +57,18 @@
       <h1 id="name"><strong>JENNIFER FRANCO</strong></h1>
       <h5>WEB DEVELOPER</h5>
       <hr>
+
    </div> 
 
     <div class="contact">
-      <p>+1 123-456-7890</p>
-      <p>emailaddress@gmail.com</p>
-      <p>123 Somewhere, Texas 10090</p>
-     
+      <p><span class="glyphicon glyphicon-earphone"></span>   +1 123-456-7890 </p>
+      <p><i class="glyphicon glyphicon-envelope"></i> email@gmail.com</p>
+      <p><span class="glyphicon glyphicon-send"></span>   123 Somewhere, Texas 10090 </p> 
     </div>
 
     <div class="summary">
       <h5>SUMMARY</h5>
+
       <hr>
     
       <p>I am a web developer based in Austin, TX. I've been building and tweaking websites for over 10 years. I love to troubleshoot, work on cool projects that allow me to explore new web design trends and provid solutions to clients and their website needs.</p>
@@ -76,7 +78,9 @@
 
     <div class="work">
       <h5>WORK EXPERIENCE</h5>
+
       <hr>
+
       <p class="dates">2019-current/Company Name</p>
       <h6><strong>WEB DEVELOPER</strong></h6>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae consequuntur animi, natus est rem voluptatibus exercitationem quas voluptatem tempore quasi voluptate molestiae error similique quidem cum optio nulla! Non, laboriosam.</p>
