edit photos on portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -224,7 +224,7 @@
 
                 <div class="card-body">
                   <p class="card-text">
-                    Here I used Fetch API to interact with APIs outside of the browser, use APIs, loop over JavaScript arrays, create multiple items and filter items.
+                    Here I used Fetch API to interact with APIs outside of the browser, use APIs, loop over JavaScript arrays, create multiple items and filter items.<br>
                   </p>
                   <div
                     class="d-flex justify-content-between align-items-center"
