home about contact done

--- a/resume.html
+++ b/resume.html
@@ -57,12 +57,11 @@
       <h1 id="name"><strong>JENNIFER FRANCO</strong></h1>
       <h5>WEB DEVELOPER</h5>
       
-      <hr style="width:15%">
-
+      <hr style="width:50%", size="3", color=black>  
    </div> 
 
     <div class="contact">
-      <p><span class="glyphicon glyphicon-earphone"></span>   +1 123-456-7890 </p>
+      <p><span class="glyphicon glyphicon-earphone"></span>   +1 123-456-7890 
       <p><i class="glyphicon glyphicon-envelope"></i> email@gmail.com</p>
       <p><span class="glyphicon glyphicon-send"></span>   123 Somewhere, Texas 10090 </p> 
     </div>
@@ -70,12 +69,12 @@
     <div class="summary">
       <h5>SUMMARY</h5>
 
-      <hr>
+      <hr class="divider" style="width:15%; color: gray">
     
       <p>I am a web developer based in Austin, TX. I've been building and tweaking websites for over 10 years. I love to troubleshoot, work on cool projects that allow me to explore new web design trends and provid solutions to clients and their website needs.</p>
     </div>
 
-    <div class="pic"><img src="./rpic.jpg" height="250px" width="250px"></div>
+    <div class="pic"><img src="./rpic.jpg"  height="230px" width="230px"></div>
 
     <div class="work">
       <h5>WORK EXPERIENCE</h5>
