--- a/about.html
+++ b/about.html
@@ -67,13 +67,13 @@
         </div>
 
         <div class="pic">
-            <img src="./about.jpg" width="500px">
+            <img src="./about.jpg" width="400px">
+            <!-- replace with photo of yourself, jenn -->
          </div>
 
-         <!-- <hr style="width:50%; margin-left: 25%"> -->
-
         <div class="info">
-            <h1><strong>I'm <br>Jenn Franco<br>and<br> I'm happy you're here!</strong></h1><br>
+            <h1><strong>I'm <br>Jenn Franco.
+              <br><br> I'm happy you're here!</strong></h1><br> 
                 <p>I began my professional career working in web development at Company.</p>
 
             <hr style="width:50%; margin-left: 25%">
@@ -91,27 +91,27 @@
     
 
         <div class="img1">
-            <img src="./img1.jpg" alt="" width="250px">
+            <img src="./img1.jpg" alt="" width="200px">
         </div>
 
         <div class="img2">
-            <img src="./img5.jpg" alt="" width="250px" >
+            <img src="./img5.jpg" alt="" width="200px" >
         </div>
 
         <div class="img3">
-            <img src="./img4.jpg" alt="" width="250px">
+            <img src="./img4.jpg" alt="" width="200px">
         </div>
 
         <div class="img4">
-            <img src="./img8.jpg" alt="" width="250px">
+            <img src="./img8.jpg" alt="" width="200px">
         </div>
 
         <div class="img5">
-            <img src="./img10.jpg" alt="" width="250px">
+            <img src="./img10.jpg" alt="" width="200px">
         </div>
 
         <div class="img6">
-            <img src="./img11.jpg" alt="" width="250px"> 
+            <img src="./img11.jpg" alt="" width="200px"> 
         </div>
 
     </div>    
