--- a/contact.html
+++ b/contact.html
@@ -57,14 +57,14 @@
 </div>
 
 
-<main>
+<div class="p-5 mb-4 bg-light rounded-3">
+  <div class="container-fluid py-5">
+    <h1 class="display-5 fw-bold">Get in Touch</h1><br>
+    <hr class="solid">
+    
+<!-- <main> -->
+
   <div class="container py-4">
-
-    <div class="p-5 mb-4 bg-light rounded-3">
-      <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">Get in Touch</h1><br>
-
-        <hr class="solid">
 
           <form action="results.html" method="GET" enctype="multipart/form-data">      
             <div class="checkbox">
@@ -90,7 +90,7 @@
                        </div>
             </div>
 
-                <div>
+                <div><br>
                   <label for="name">Name: </label><br>
                   <input type="text" name="name" id="name">
               </div>
@@ -142,9 +142,9 @@
             <a href="https://instagram.com" class="fa fa-instagram bg-dark "></a>
         </div>
       </div>
-  </div>
+      
 
-</main>
+    </div>
 
   <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
     <p>&copy; 2022 Company, Inc. All rights reserved.</p>
